Revert "Bug 544606 - Disabled button text not visible in dark theme on Mac"
It affects the text color of enabled Buttons in Forms.

This reverts commit 94519cab94d972759c797b69d211b623fc8d7808.

--- a/bundles/org.eclipse.ui.themes/css/e4-dark_mac.css
+++ b/bundles/org.eclipse.ui.themes/css/e4-dark_mac.css
@@ -202,6 +202,5 @@ Form > LayoutComposite > LayoutComposite > Button,
 .MPart LayoutComposite > * > LayoutComposite > Section > LayoutComposite > Button,
 .MPartStack.active .MPart LayoutComposite > * > LayoutComposite > Section > LayoutComposite > Button {
     background-color: unset;
-    color: unset;
 }
 
